<resources>
    <string name="app_name">register2</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="startForm">فرم ثبت اطلاعات</string>
    <string name="nationalCode">کدملی</string>
    <string name="bornCity">محل تولد</string>
    <string name="address">آدرس</string>
    <string name="postalCode">کد پستی</string>
    <string name="gender">جنسیت</string>
    <string name="female">زن</string>
    <string name="male">مرد</string>
    <string name="registerButton">ثبت اطلاعات</string>
    <string name="showInfo">مشاهده ی اطلاعات ثبت شده</string>
    <string name="editButton">تغییر اطلاعات</string>
    <string name="newUser">ورود کاربر جدید</string>
</resources>