<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp">


    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_margin="12dp"
        android:text="@string/startForm"
        android:textSize="20sp"
        android:background="@color/green"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="305dp" />


    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="425dp" />

    <EditText
        android:id="@+id/editTextPersonNationalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/nationalCode"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="425dp" />

    <EditText
        android:id="@+id/editTextBornCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bornCity"
        android:inputType="text"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="177dp" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/address"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="425dp" />

    <EditText
        android:id="@+id/editTextPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/postalCode"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="425dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        android:layout_gravity="end"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="305dp" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="506dp"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="center">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/female"/>
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/male"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false"
        app:cornerRadius="100dp"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="431dp" />

</LinearLayout>